crates/tokmd-analysis/src/fun/tests/snapshots/tokmd_analysis__fun__tests__snapshot_eco__eco_grade_a.snap
---
source: crates/tokmd-analysis/src/fun/tests/snapshot_eco.rs
assertion_line: 145
expression: json
---
{
  "eco_label": {
    "score": 95.0,
    "label": "A",
    "bytes": 500000,
    "notes": "Size-based eco label (0.48 MB)"
  }
}
