crates/tokmd-analysis/src/fun/tests/snapshots/tokmd_analysis__fun__tests__snapshot_eco__eco_grade_b.snap
---
source: crates/tokmd-analysis/src/fun/tests/snapshot_eco.rs
assertion_line: 153
expression: json
---
{
  "eco_label": {
    "score": 80.0,
    "label": "B",
    "bytes": 5242880,
    "notes": "Size-based eco label (5 MB)"
  }
}
