crates/tokmd-analysis/src/fun/tests/snapshots/tokmd_analysis__fun__tests__snapshot_eco__eco_grade_c.snap
---
source: crates/tokmd-analysis/src/fun/tests/snapshot_eco.rs
assertion_line: 161
expression: json
---
{
  "eco_label": {
    "score": 65.0,
    "label": "C",
    "bytes": 26214400,
    "notes": "Size-based eco label (25 MB)"
  }
}
