crates/tokmd-analysis/src/fun/tests/snapshots/tokmd_analysis__fun__tests__snapshot_eco__eco_grade_d.snap
---
source: crates/tokmd-analysis/src/fun/tests/snapshot_eco.rs
assertion_line: 169
expression: json
---
{
  "eco_label": {
    "score": 45.0,
    "label": "D",
    "bytes": 104857600,
    "notes": "Size-based eco label (100 MB)"
  }
}
