crates/tokmd-analysis/src/fun/tests/snapshots/tokmd_analysis__fun__tests__snapshot_eco__eco_grade_e.snap
---
source: crates/tokmd-analysis/src/fun/tests/snapshot_eco.rs
assertion_line: 177
expression: json
---
{
  "eco_label": {
    "score": 30.0,
    "label": "E",
    "bytes": 314572800,
    "notes": "Size-based eco label (300 MB)"
  }
}
