crates/tokmd-analysis/src/fun/tests/snapshots/tokmd_analysis__fun__tests__snapshot_eco__eco_zero_bytes.snap
---
source: crates/tokmd-analysis/src/fun/tests/snapshot_eco.rs
assertion_line: 185
expression: json
---
{
  "eco_label": {
    "score": 95.0,
    "label": "A",
    "bytes": 0,
    "notes": "Size-based eco label (0 MB)"
  }
}
